--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
+clap = { version = "4.5.7", features = ["derive"] }
+crossterm = "0.27.0"
+tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync"] }
+tui = "0.19.0"
