--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
+dyn-clone = "1.0.17"
 tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync"] }
 tui = "0.19.0"
