--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ crossterm = "0.27.0"
 dyn-clone = "1.0.17"
 tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync"] }
 tui = "0.19.0"
+uuid = { version = "1.8.0", features = ["v8"] }
