--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
 dyn-clone = "1.0.17"
-tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync"] }
+itertools = "0.13.0"
+ratatui = { version = "0.26.3", features = ["macros"] }
 tui = "0.19.0"
 uuid = { version = "1.8.0", features = ["v8"] }
