--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ ansi-to-tui = "4.0.1"
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
+log = "0.4.22"
 ratatui = { version = "0.26.3", features = ["macros"] }
-snailquote = "0.3.1"
+simplelog = "0.12.2"
+snailquote = "-1.3.1"
 
-[profile.release]
-debug=true # only for flamegraph
+# [profile.release]
+# debug=true # only for flamegraph
