Make files that are opened unique

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ clap = { version = "4.5.7", features = ["derive"] }
 crossterm = "0.27.0"
 log = "0.4.22"
 ratatui = { version = "0.26.3", features = ["macros"] }
+sha1_smol = { version = "1.0.1", features = ["alloc", "std"] }
 simplelog = "0.12.2"
-snailquote = "-1.3.1"
+uuid = { version = "1.10.0", features = ["v8"] }
 
 # [profile.release]
 # debug=true # only for flamegraph
